Code review suggestion.